fix: align text in table

--- a/src/app/modules/departures/pages/table-publishers-page/table-publishers-page.component.scss
+++ b/src/app/modules/departures/pages/table-publishers-page/table-publishers-page.component.scss
@@ -3,3 +3,11 @@
     justify-content: center;
     width: 100%;
 }
+.text-center{
+    text-align: start !important
+}
+@media (max-width: 767px) {
+    .text-center{
+        text-align: center !important
+    }
+}
